--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -41,7 +41,8 @@ bench_bench_bitcoin_SOURCES = \
   bench/bech32.cpp \
   bench/lockedpool.cpp \
   bench/poly1305.cpp \
-  bench/prevector.cpp
+  bench/prevector.cpp \
+  interfaces/init_bitcoind.cpp
 
 nodist_bench_bench_bitcoin_SOURCES = $(GENERATED_BENCH_FILES)
 
