--- a/.travis.yml
+++ b/.travis.yml
@@ -140,6 +140,16 @@ jobs:
         FILE_ENV="./ci/test/00_setup_env_native_fuzz_with_valgrind.sh"
 
     - stage: test
+      name: 'x86_64 Linux [GOAL: install]  [bionic]  [multiprocess]'
+      env: >-
+        HOST=x86_64-unknown-linux-gnu
+        PACKAGES="cmake python3"
+        DEP_OPTS="MULTIPROCESS=1"
+        GOAL="install"
+        BITCOIN_CONFIG=""
+        TEST_RUNNER_ENV="BITCOIND=bitcoin-node"
+
+    - stage: test
       name: 'x86_64 Linux  [GOAL: install]  [bionic]  [no wallet]'
       env: >-
         FILE_ENV="./ci/test/00_setup_env_native_nowallet.sh"
